<resources>
    <string name="app_name">Story App</string>
    <string name="story_app_logo">Story App Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">Input your email</string>
    <string name="password_hint">Input your password</string>
    <string name="name_hint">Input your name</string>
    <string name="join_us_now">Join Us Now!</string>
    <string name="required">Required*</string>
    <string name="email_spec">Email must be unique</string>
    <string name="pass_spec">Password must be at least 6 characters</string>
    <string name="email_error">Invalid Email Address</string>
    <string name="sign_out">Sign Out</string>
    <string name="successfully_login_message">Sign In Success!</string>
    <string name="next">Next</string>
    <string name="dialogSignOutMessage">Are you sure to sign out?</string>
    <string name="dialogSignOutTitle">Sign Out Dialog!</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome %s!</string>
    <string name="story_name">%s\'s Story </string>
    <string name="username">USERNAME</string>
    <string name="add_story_button">Add Story Button</string>
    <string name="description">Description</string>
    <string name="list_story_is_empty">List Story is Empty</string>
    <string name="story_image">Story Image</string>
    <string name="capture_button">Capture Button</string>
    <string name="switch_camera_button">Switch Camera Button</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image_preview">Image Preview</string>
    <string name="upload">Upload</string>
    <string name="show_camera_error">Failed to Show Camera</string>
    <string name="permission_denied">Didn\'t get permission</string>
    <string name="load_image_failed">Load Image Failed!</string>
    <string name="load_image_success">Load Image Successed!</string>
    <string name="uploadActivity_title">Upload Story</string>
    <string name="upload_image_error">Please enter the image first</string>
    <string name="photo">photo</string>
    <string name="language">Language</string>
    <string name="error_get_detail_story">Failed to get story</string>
    <string name="list">List</string>
    <string name="map">Maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="no_internet_connetion">No Internet Connetion!</string>
    <string name="try_again">Try Again!</string>
    <string name="input_your_location">Your Location</string>
</resources>