<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.UploadActivity">

        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:scaleType="fitXY"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/image_svgrepo_com"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image_preview" />

        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="16dp"
            android:text="@string/camera"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/galleryBtn"
            app:layout_constraintEnd_toStartOf="@+id/galleryBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/galleryBtn" />

        <Button
            android:id="@+id/galleryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="88dp"
            android:text="@string/gallery"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/cameraBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewImage"
            />

        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="10"
            android:minLines="5"
            android:gravity="top|start"
            android:hint="@string/description"
            android:padding="10dp"
            android:background="@drawable/border_input"
            android:maxLines="15"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraBtn"/>

        <Button
            android:id="@+id/uploadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/white"
            android:text="@string/upload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDesc"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
