<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/storyAppIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:alpha="0"
            android:src="@drawable/story_icon_login"
            android:contentDescription=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/join_us_now"
            android:textSize="30sp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/storyAppIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.dicoding.storyapp.customview.EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="32dp"
            android:alpha="0"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/border_input"
            android:drawableStart="@drawable/state_icon_person"
            android:hint="@string/name_hint"
            android:textSize="16sp"
            android:drawablePadding="16dp"
            android:inputType="text"
            android:minHeight="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpText" />

        <com.dicoding.storyapp.customview.EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="24dp"
            android:alpha="0"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/border_input"
            android:drawableStart="@drawable/state_icon_email"
            android:hint="@string/email_hint"
            android:textSize="16sp"
            android:drawablePadding="16dp"
            android:minHeight="55dp"
            android:inputType="textWebEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <com.dicoding.storyapp.customview.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="24dp"
            android:alpha="0"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/border_input"
            android:drawableStart="@drawable/state_icon_lock"
            android:drawablePadding="16dp"
            android:hint="@string/password_hint"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:minHeight="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_up"
            android:alpha="0"
            android:layout_marginTop="24dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"/>

        <ProgressBar
            android:id="@+id/loadingIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
